--- a/index.html
+++ b/index.html
@@ -21,19 +21,20 @@
 
   <body>
     <header>
-      <div class="container">
+      <div class="container header">
         <a href="./index.html" class="logo">Web<span class="header-logo-ending">Studio</span> </a>
         <nav>
           <ul class="site-nav">
-            <li><a href="./index.html" class="current">Студія</a></li>
-            <li><a href="./portfolio.html">Портфоліо</a></li>
-            <li><a href="">Контакти</a></li>
+            <li class="item"><a href="./index.html" class="current">Студія</a></li>
+            <li class="item"><a href="./portfolio.html">Портфоліо</a></li>
+            <li class="item"><a href="">Контакти</a></li>
           </ul>
         </nav>
         <ul class="auth-nav">
-          <li><a href="mailto:info@devstudio.com" class="button">info@devstudio.com</a></li>
-          <li></li>
-          <li><a href="tel:+380961111111" class="button">+38 096 111 11 11</a></li>
+          <li class="item">
+            <a href="mailto:info@devstudio.com" class="button">info@devstudio.com</a>
+          </li>
+          <li class="item"><a href="tel:+380961111111" class="button">+38 096 111 11 11</a></li>
         </ul>
       </div>
     </header>
@@ -41,11 +42,8 @@
     <main>
       <!-- Герой -->
       <section class="section hero">
-        <div class="container">
-          <h1 class="hero-title">
-            Ефективні рішення для <br />
-            вашого бізнесу
-          </h1>
+        <div class="container hero-container">
+          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button class="button" type="button">Замовити послугу</button>
         </div>
       </section>
@@ -53,25 +51,25 @@
       <!-- Особливості -->
       <section class="section peculiarities">
         <div class="container">
-          <h2 class="section-title">Особливості</h2>
+          <h2 class="section-title visually-hidden">Особливості</h2>
           <ul class="section-list">
-            <li>
+            <li class="peculiarities-item">
               <h3 class="title">Увага до деталей</h3>
               <p class="text">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
-            <li>
+            <li class="peculiarities-item">
               <h3 class="title">Пунктуальність</h3>
               <p class="text">
                 Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
-            <li>
+            <li class="peculiarities-item">
               <h3 class="title">Планування</h3>
               <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
             </li>
-            <li>
+            <li class="peculiarities-item">
               <h3 class="title">Сучасні технології</h3>
               <p class="text">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -82,11 +80,11 @@
       </section>
 
       <!-- Чим займаємося -->
-      <section class="section">
-        <div class="container">
+      <section class="section works">
+        <div class="container works">
           <h2 class="section-title">Чим ми займаємося</h2>
-          <ul class="section-list">
-            <li>
+          <ul class="section-list works">
+            <li class="works-item">
               <img
                 src="./images/close-up-image-programer-working-his-desk-office.jpg"
                 alt="Програміст великим планом працює за своїм столом в офісі"
@@ -94,7 +92,7 @@
                 height="294"
               />
             </li>
-            <li>
+            <li class="works-item">
               <img
                 src="./images/web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones.jpg"
                 alt="Веб-дизайнер працює над інтерфейсом мобільних телефонів"
@@ -102,7 +100,7 @@
                 height="294"
               />
             </li>
-            <li>
+            <li class="works-item">
               <img
                 src="./images/creative-artist-web-design-with-working-colour-selection-graphic-tablet.jpg"
                 alt="Креативний художник з включеним графічним планшетом для вибору кольору"
@@ -118,36 +116,44 @@
       <section class="section team">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
-          <ul class="section-list">
-            <li>
+          <ul class="section-list team">
+            <li class="team-item">
               <img
                 src="./images/product-designer.jpg"
                 alt="Ігор Дем'яненко"
                 width="270"
                 height="260"
               />
-              <h3 class="title">Ігор Дем'яненко</h3>
-              <p class="text" lang="en">Product Designer</p>
+              <div class="team-item-about">
+                <h3 class="title">Ігор Дем'яненко</h3>
+                <p class="text" lang="en">Product Designer</p>
+              </div>
             </li>
-            <li>
+            <li class="team-item">
               <img
                 src="./images/frontend-developer.jpg"
                 alt="Ольга Рєпіна"
                 width="270"
                 height="260"
               />
-              <h3 class="title">Ольга Рєпіна</h3>
-              <p class="text" lang="en">Frontend Developer</p>
+              <div class="team-item-about">
+                <h3 class="title">Ольга Рєпіна</h3>
+                <p class="text" lang="en">Frontend Developer</p>
+              </div>
             </li>
-            <li>
+            <li class="team-item">
               <img src="./images/marketing.jpg" alt="Микола Тарасов" width="270" height="260" />
-              <h3 class="title">Микола Тарасов</h3>
-              <p class="text" lang="en">Marketing</p>
+              <div class="team-item-about">
+                <h3 class="title">Микола Тарасов</h3>
+                <p class="text" lang="en">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="team-item">
               <img src="./images/ui-designer.jpg" alt="Михайло Єрмаков" width="270" height="260" />
-              <h3 class="title">Михайло Єрмаков</h3>
-              <p class="text" lang="en">UI Designer</p>
+              <div class="team-item-about">
+                <h3 class="title">Михайло Єрмаков</h3>
+                <p class="text" lang="en">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -165,7 +171,7 @@
               >
             </li>
             <li>
-              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <a href="mailto:info@devstudio.com" class="mail-link">info@devstudio.com</a>
             </li>
             <li>
               <a href="tel:+380961111111">+38 096 111 11 11</a>
