--- a/portfolio.html
+++ b/portfolio.html
@@ -20,19 +20,20 @@
   </head>
   <body>
     <header>
-      <div class="container">
+      <div class="container header">
         <a href="./index.html" class="logo">Web<span class="header-logo-ending">Studio</span> </a>
         <nav>
           <ul class="site-nav">
-            <li><a href="./index.html">Студія</a></li>
-            <li><a href="./portfolio.html" class="current">Портфоліо</a></li>
-            <li><a href="">Контакти</a></li>
+            <li class="item"><a href="./index.html">Студія</a></li>
+            <li class="item"><a href="./portfolio.html" class="current">Портфоліо</a></li>
+            <li class="item"><a href="">Контакти</a></li>
           </ul>
         </nav>
         <ul class="auth-nav">
-          <li><a href="mailto:info@devstudio.com" class="button">info@devstudio.com</a></li>
-          <li></li>
-          <li><a href="tel:+380961111111" class="button">+38 096 111 11 11</a></li>
+          <li class="item">
+            <a href="mailto:info@devstudio.com" class="button">info@devstudio.com</a>
+          </li>
+          <li class="item"><a href="tel:+380961111111" class="button">+38 096 111 11 11</a></li>
         </ul>
       </div>
     </header>
@@ -40,8 +41,8 @@
     <main>
       <section class="section portfolio">
         <div class="container">
-          <h1>Портфоліо</h1>
-          <ul>
+          <h1 class="visually-hidden">Портфоліо</h1>
+          <ul class="portfolio-list">
             <li>
               <button class="button" type="button">Усі</button>
             </li>
@@ -58,96 +59,132 @@
               <button class="button" type="button">Маркетинг</button>
             </li>
           </ul>
-          <ul class="section-list">
-            <li>
-              <img
-                src="./images/portfolio1.jpg"
-                alt="Відкритий ноутбук з зображенням фотографій людей з описом до них"
-                width="370"
-                height="294"
-              />
-              <h2 class="title">Технокряк</h2>
-              <p class="text">Веб-сайт</p>
+          <ul class="section-list portfolio">
+            <li class="portfolio-item">
+              <div>
+                <img
+                  src="./images/portfolio1.jpg"
+                  alt="Відкритий ноутбук з зображенням фотографій людей з описом до них"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-item-about">
+                  <h2 class="title">Технокряк</h2>
+                  <p class="text">Веб-сайт</p>
+                </div>
+              </div>
             </li>
-            <li>
-              <img
-                src="./images/portfolio2.jpg"
-                alt="Два баскетболіста під час гри з мʼячем"
-                width="370"
-                height="294"
-              />
-              <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-              <p class="text">Дизайн</p>
+            <li class="portfolio-item">
+              <div>
+                <img
+                  src="./images/portfolio2.jpg"
+                  alt="Два баскетболіста під час гри з мʼячем"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-item-about">
+                  <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                  <p class="text">Дизайн</p>
+                </div>
+              </div>
             </li>
-            <li>
-              <img
-                src="./images/portfolio3.jpg"
-                alt="Логотип з назвою рибного ресторану"
-                width="370"
-                height="294"
-              />
-              <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
-              <p class="text">Додаток</p>
+            <li class="portfolio-item">
+              <div>
+                <img
+                  src="./images/portfolio3.jpg"
+                  alt="Логотип з назвою рибного ресторану"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-item-about">
+                  <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
+                  <p class="text">Додаток</p>
+                </div>
+              </div>
             </li>
-            <li>
-              <img
-                src="./images/portfolio4.jpg"
-                alt="Студійні навушники"
-                width="370"
-                height="294"
-              />
-              <h2 class="title">Проєкт <span lang="en">Prime</span></h2>
-              <p class="text">Маркетинг</p>
+            <li class="portfolio-item">
+              <div>
+                <img
+                  src="./images/portfolio4.jpg"
+                  alt="Студійні навушники"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-item-about">
+                  <h2 class="title">Проєкт <span lang="en">Prime</span></h2>
+                  <p class="text">Маркетинг</p>
+                </div>
+              </div>
             </li>
-            <li>
-              <img
-                src="./images/portfolio5.jpg"
-                alt="Дві перпендикулярно лежачі коробки різного розміру, кольору та різними логотипами "
-                width="370"
-                height="294"
-              />
-              <h2 class="title">Проєкт <span lang="en">Boxes</span></h2>
-              <p class="text">Додаток</p>
+            <li class="portfolio-item">
+              <div>
+                <img
+                  src="./images/portfolio5.jpg"
+                  alt="Дві перпендикулярно лежачі коробки різного розміру, кольору та різними логотипами "
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-item-about">
+                  <h2 class="title">Проєкт <span lang="en">Boxes</span></h2>
+                  <p class="text">Додаток</p>
+                </div>
+              </div>
             </li>
-            <li>
-              <img
-                src="./images/portfolio6.jpg"
-                alt="Монітор з зображенням сайту"
-                width="370"
-                height="294"
-              />
-              <h2 class="title" lang="en">Inspiration has no Borders</h2>
-              <p class="text">Веб-сайт</p>
+            <li class="portfolio-item">
+              <div>
+                <img
+                  src="./images/portfolio6.jpg"
+                  alt="Монітор з зображенням сайту"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-item-about">
+                  <h2 class="title" lang="en">Inspiration has no Borders</h2>
+                  <p class="text">Веб-сайт</p>
+                </div>
+              </div>
             </li>
-            <li>
-              <img
-                src="./images/portfolio7.jpg"
-                alt="Відкрита книга з картиками та описом"
-                width="370"
-                height="294"
-              />
-              <h2 class="title">Видання <span lang="en">Limited Edition</span></h2>
-              <p class="text">Дизайн</p>
+            <li class="portfolio-item">
+              <div>
+                <img
+                  src="./images/portfolio7.jpg"
+                  alt="Відкрита книга з картиками та описом"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-item-about">
+                  <h2 class="title">Видання <span lang="en">Limited Edition</span></h2>
+                  <p class="text">Дизайн</p>
+                </div>
+              </div>
             </li>
-            <li>
-              <img
-                src="./images/portfolio8.jpg"
-                alt="Етикетка на шнурку з назвою бренда"
-                width="370"
-                height="294"
-              />
-              <h2 class="title">Проєкт <span lang="en">LAB</span></h2>
-              <p class="text">Маркетинг</p>
+            <li class="portfolio-item">
+              <div>
+                <img
+                  src="./images/portfolio8.jpg"
+                  alt="Етикетка на шнурку з назвою бренда"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-item-about">
+                  <h2 class="title">Проєкт <span lang="en">LAB</span></h2>
+                  <p class="text">Маркетинг</p>
+                </div>
+              </div>
             </li>
-            <li>
-              <img
-                src="./images/portfolio9.jpg"
-                alt="Відкритий ноутбук за яким знаходиться людина з зображенням сайту"
-                width="370"
-                height="294"
-              />
-              <h2 class="title" lang="en">Growing Business</h2>
-              <p class="text">Додаток</p>
+            <li class="portfolio-item">
+              <div>
+                <img
+                  src="./images/portfolio9.jpg"
+                  alt="Відкритий ноутбук за яким знаходиться людина з зображенням сайту"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-item-about">
+                  <h2 class="title" lang="en">Growing Business</h2>
+                  <p class="text">Додаток</p>
+                </div>
+              </div>
             </li>
           </ul>
         </div>
@@ -165,7 +202,7 @@
               >
             </li>
             <li>
-              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <a href="mailto:info@devstudio.com" class="mail-link">info@devstudio.com</a>
             </li>
             <li>
               <a href="tel:+380961111111">+38 096 111 11 11</a>
