--- a/index.html
+++ b/index.html
@@ -165,16 +165,16 @@
         <a href="./index.html" class="logo">Web<span class="footer-logo-ending">Studio</span></a>
         <address>
           <ul class="address-list">
-            <li>
-              <a href="https://goo.gl/maps/nT2pFgaQttPLfZXJ7" class="map-link"
+            <li class="address-item">
+              <a href="https://goo.gl/maps/nT2pFgaQttPLfZXJ7" class="map-link address-link"
                 >м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
-            <li>
-              <a href="mailto:info@devstudio.com" class="mail-link">info@devstudio.com</a>
+            <li class="address-item">
+              <a href="mailto:info@devstudio.com" class="address-link">info@devstudio.com</a>
             </li>
-            <li>
-              <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="address-item">
+              <a href="tel:+380961111111" class="address-link">+38 096 111 11 11</a>
             </li>
           </ul>
         </address>
