--- a/portfolio.html
+++ b/portfolio.html
@@ -192,7 +192,7 @@
     </main>
 
     <footer>
-      <div class="container footer">
+      <div class="container">
         <a href="./index.html" class="logo">Web<span class="footer-logo-ending">Studio</span></a>
         <address>
           <ul class="address-list">
